# python-for-the-muggle-born-developer

./: README.md  python_for_the_muggle-born_developer.md
assets/: python-theme.css
expylliarmus/: .dockerignore  .gitignore  .pylintrc  Dockerfile  PROFILING.md  README.md  pyproject.toml  start-expylliarmus-server.sh  steps.md  time.sh
expylliarmus/expylliarmus/: __main__.py  analyze.py  cli_gen.py  cli_lists.py  dump.py  illustrate.py  match.py  pymp.py
expylliarmus/expylliarmus/api/: README.md  __main__.py
expylliarmus/tests/: test_expylliarmus.py  test_match.py
expylliarmus/tests/data/: __init__.py
my-project/: pyvenv.cfg  requirements.txt
quoi-de-noeuf-python/: 2022.03.03.md  2022.04.07.md
quoi-de-noeuf-python/assets/: quoi-de-noeuf-python.css
