[tool.poetry]
name = "expylliarmus"
version = "0.1.0"
description = ""
authors = ["Lucius Malforel <luc.sorel@zenika.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
py2puml = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
