[tool.poetry]
name = "expylliarmus"
version = "0.1.0"
description = ""
authors = ["Luc"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.0"
fastapi = "^0.74.1"
pyinstrument = {version = "^4.1.1", optional = true}
Pympler = {version = "^0.9", optional = true}
py-spy = {version = "^0.3.11", optional = true}
uvicorn = "^0.17.5"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.11.1"

[tool.poetry.extras]
instrument = ["pyinstrument", "py-spy", "Pympler"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
